[gd_scene load_steps=5 format=2]

[ext_resource path="res://Test/test_bg.png" type="Texture" id=1]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Lexical/Letter/LearnLetterButton.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_bottom = -8
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -4.0
margin_right = 66.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 29.9889, 16.1936 )
scale = Vector2( 0.231781, 0.183874 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 1.0
margin_right = 64.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "_you_dont_know_letters_go_to_letter_world"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
